src/abc/parser/abcHeaderParser.java
// Generated from abcHeader.g4 by ANTLR 4.5.1

package abc.parser;
// Do not edit this .java file! Edit the .g4 file and re-run Antlr.

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class abcHeaderParser extends Parser {
  static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache =
    new PredictionContextCache();
  public static final int
    T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
    T__9=10, T__10=11, T__11=12, KEY=13, DIGIT=14, STRING=15, NEWLINE=16, 
    SPACES=17;
  public static final int
    RULE_root = 0, RULE_fieldnumber = 1, RULE_fieldtitle = 2, RULE_otherfields = 3, 
    RULE_fieldcomposer = 4, RULE_fielddefaultlength = 5, RULE_fieldmeter = 6, 
    RULE_fieldtempo = 7, RULE_fieldvoice = 8, RULE_fieldkey = 9, RULE_comment = 10, 
    RULE_endofline = 11;
  public static final String[] ruleNames = {
    "root", "fieldnumber", "fieldtitle", "otherfields", "fieldcomposer", 
    "fielddefaultlength", "fieldmeter", "fieldtempo", "fieldvoice", "fieldkey", 
    "comment", "endofline"
  };

  private static final String[] _LITERAL_NAMES = {
    null, "'X:'", "'T:'", "'C:'", "'L:'", "'/'", "'M:'", "'C'", "'C|'", 
    "'Q:'", "'='", "'V:'", "'%'"
  };
  private static final String[] _SYMBOLIC_NAMES = {
    null, null, null, null, null, null, null, null, null, null, null, null, 
    null, "KEY", "DIGIT", "STRING", "NEWLINE", "SPACES"
  };
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated
  public static final String[] tokenNames;
  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override

  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() { return "abcHeader.g4"; }

  @Override
  public String[] getRuleNames() { return ruleNames; }

  @Override
  public String getSerializedATN() { return _serializedATN; }

  @Override
  public ATN getATN() { return _ATN; }


      // This method makes the parser stop running if it encounters
      // invalid input and throw a RuntimeException.
      public void reportErrorsAsExceptions() {
          // To prevent any reports to standard error, add this line:
          //removeErrorListeners();
          
          addErrorListener(new BaseErrorListener() {
              public void syntaxError(Recognizer<?, ?> recognizer,
                                      Object offendingSymbol, 
                                      int line, int charPositionInLine,
                                      String msg, RecognitionException e) {
                  throw new ParseCancellationException(msg, e);
              }
          });
      }

  public abcHeaderParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
  }
  public static class RootContext extends ParserRuleContext {
    public FieldnumberContext fieldnumber() {
      return getRuleContext(FieldnumberContext.class,0);
    }
    public FieldtitleContext fieldtitle() {
      return getRuleContext(FieldtitleContext.class,0);
    }
    public FieldkeyContext fieldkey() {
      return getRuleContext(FieldkeyContext.class,0);
    }
    public TerminalNode EOF() { return getToken(abcHeaderParser.EOF, 0); }
    public List<CommentContext> comment() {
      return getRuleContexts(CommentContext.class);
    }
    public CommentContext comment(int i) {
      return getRuleContext(CommentContext.class,i);
    }
    public List<OtherfieldsContext> otherfields() {
      return getRuleContexts(OtherfieldsContext.class);
    }
    public OtherfieldsContext otherfields(int i) {
      return getRuleContext(OtherfieldsContext.class,i);
    }
    public RootContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_root; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).enterRoot(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).exitRoot(this);
    }
  }

  public final RootContext root() throws RecognitionException {
    RootContext _localctx = new RootContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_root);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(24);
      fieldnumber();
      setState(28);
      _errHandler.sync(this);
      _la = _input.LA(1);
      while (_la==T__11) {
        {
        {
        setState(25);
        comment();
        }
        }
        setState(30);
        _errHandler.sync(this);
        _la = _input.LA(1);
      }
      setState(31);
      fieldtitle();
      setState(35);
      _errHandler.sync(this);
      _la = _input.LA(1);
      while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__5) | (1L << T__8) | (1L << T__10) | (1L << T__11))) != 0)) {
        {
        {
        setState(32);
        otherfields();
        }
        }
        setState(37);
        _errHandler.sync(this);
        _la = _input.LA(1);
      }
      setState(38);
      fieldkey();
      setState(39);
      match(EOF);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldnumberContext extends ParserRuleContext {
    public EndoflineContext endofline() {
      return getRuleContext(EndoflineContext.class,0);
    }
    public List<TerminalNode> DIGIT() { return getTokens(abcHeaderParser.DIGIT); }
    public TerminalNode DIGIT(int i) {
      return getToken(abcHeaderParser.DIGIT, i);
    }
    public FieldnumberContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldnumber; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).enterFieldnumber(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).exitFieldnumber(this);
    }
  }

  public final FieldnumberContext fieldnumber() throws RecognitionException {
    FieldnumberContext _localctx = new FieldnumberContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_fieldnumber);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(41);
      match(T__0);
      setState(43); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(42);
        match(DIGIT);
        }
        }
        setState(45); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( _la==DIGIT );
      setState(47);
      endofline();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldtitleContext extends ParserRuleContext {
    public EndoflineContext endofline() {
      return getRuleContext(EndoflineContext.class,0);
    }
    public List<TerminalNode> STRING() { return getTokens(abcHeaderParser.STRING); }
    public TerminalNode STRING(int i) {
      return getToken(abcHeaderParser.STRING, i);
    }
    public List<TerminalNode> DIGIT() { return getTokens(abcHeaderParser.DIGIT); }
    public TerminalNode DIGIT(int i) {
      return getToken(abcHeaderParser.DIGIT, i);
    }
    public FieldtitleContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldtitle; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).enterFieldtitle(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).exitFieldtitle(this);
    }
  }

  public final FieldtitleContext fieldtitle() throws RecognitionException {
    FieldtitleContext _localctx = new FieldtitleContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_fieldtitle);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(49);
      match(T__1);
      setState(51); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(50);
        _la = _input.LA(1);
        if ( !(_la==DIGIT || _la==STRING) ) {
        _errHandler.recoverInline(this);
        } else {
          consume();
        }
        }
        }
        setState(53); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( _la==DIGIT || _la==STRING );
      setState(55);
      endofline();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class OtherfieldsContext extends ParserRuleContext {
    public EndoflineContext endofline() {
      return getRuleContext(EndoflineContext.class,0);
    }
    public FieldcomposerContext fieldcomposer() {
      return getRuleContext(FieldcomposerContext.class,0);
    }
    public FielddefaultlengthContext fielddefaultlength() {
      return getRuleContext(FielddefaultlengthContext.class,0);
    }
    public FieldmeterContext fieldmeter() {
      return getRuleContext(FieldmeterContext.class,0);
    }
    public FieldtempoContext fieldtempo() {
      return getRuleContext(FieldtempoContext.class,0);
    }
    public FieldvoiceContext fieldvoice() {
      return getRuleContext(FieldvoiceContext.class,0);
    }
    public CommentContext comment() {
      return getRuleContext(CommentContext.class,0);
    }
    public OtherfieldsContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_otherfields; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).enterOtherfields(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).exitOtherfields(this);
    }
  }

  public final OtherfieldsContext otherfields() throws RecognitionException {
    OtherfieldsContext _localctx = new OtherfieldsContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_otherfields);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(63);
      switch (_input.LA(1)) {
      case T__2:
        {
        setState(57);
        fieldcomposer();
        }
        break;
      case T__3:
        {
        setState(58);
        fielddefaultlength();
        }
        break;
      case T__5:
        {
        setState(59);
        fieldmeter();
        }
        break;
      case T__8:
        {
        setState(60);
        fieldtempo();
        }
        break;
      case T__10:
        {
        setState(61);
        fieldvoice();
        }
        break;
      case T__11:
        {
        setState(62);
        comment();
        }
        break;
      default:
        throw new NoViableAltException(this);
      }
      setState(65);
      endofline();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldcomposerContext extends ParserRuleContext {
    public List<TerminalNode> STRING() { return getTokens(abcHeaderParser.STRING); }
    public TerminalNode STRING(int i) {
      return getToken(abcHeaderParser.STRING, i);
    }
    public FieldcomposerContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldcomposer; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).enterFieldcomposer(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).exitFieldcomposer(this);
    }
  }

  public final FieldcomposerContext fieldcomposer() throws RecognitionException {
    FieldcomposerContext _localctx = new FieldcomposerContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_fieldcomposer);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(67);
      match(T__2);
      setState(69); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(68);
        match(STRING);
        }
        }
        setState(71); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( _la==STRING );
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FielddefaultlengthContext extends ParserRuleContext {
    public List<TerminalNode> DIGIT() { return getTokens(abcHeaderParser.DIGIT); }
    public TerminalNode DIGIT(int i) {
      return getToken(abcHeaderParser.DIGIT, i);
    }
    public FielddefaultlengthContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fielddefaultlength; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).enterFielddefaultlength(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).exitFielddefaultlength(this);
    }
  }

  public final FielddefaultlengthContext fielddefaultlength() throws RecognitionException {
    FielddefaultlengthContext _localctx = new FielddefaultlengthContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_fielddefaultlength);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(73);
      match(T__3);
      setState(75); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(74);
        match(DIGIT);
        }
        }
        setState(77); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( _la==DIGIT );
      setState(79);
      match(T__4);
      setState(81); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(80);
        match(DIGIT);
        }
        }
        setState(83); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( _la==DIGIT );
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldmeterContext extends ParserRuleContext {
    public List<TerminalNode> DIGIT() { return getTokens(abcHeaderParser.DIGIT); }
    public TerminalNode DIGIT(int i) {
      return getToken(abcHeaderParser.DIGIT, i);
    }
    public FieldmeterContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldmeter; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).enterFieldmeter(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).exitFieldmeter(this);
    }
  }

  public final FieldmeterContext fieldmeter() throws RecognitionException {
    FieldmeterContext _localctx = new FieldmeterContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_fieldmeter);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(85);
      match(T__5);
      setState(99);
      switch (_input.LA(1)) {
      case T__6:
        {
        setState(86);
        match(T__6);
        }
        break;
      case T__7:
        {
        setState(87);
        match(T__7);
        }
        break;
      case DIGIT:
        {
        {
        setState(89); 
        _errHandler.sync(this);
        _la = _input.LA(1);
        do {
          {
          {
          setState(88);
          match(DIGIT);
          }
          }
          setState(91); 
          _errHandler.sync(this);
          _la = _input.LA(1);
        } while ( _la==DIGIT );
        setState(93);
        match(T__4);
        setState(95); 
        _errHandler.sync(this);
        _la = _input.LA(1);
        do {
          {
          {
          setState(94);
          match(DIGIT);
          }
          }
          setState(97); 
          _errHandler.sync(this);
          _la = _input.LA(1);
        } while ( _la==DIGIT );
        }
        }
        break;
      default:
        throw new NoViableAltException(this);
      }
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldtempoContext extends ParserRuleContext {
    public List<TerminalNode> DIGIT() { return getTokens(abcHeaderParser.DIGIT); }
    public TerminalNode DIGIT(int i) {
      return getToken(abcHeaderParser.DIGIT, i);
    }
    public FieldtempoContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldtempo; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).enterFieldtempo(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).exitFieldtempo(this);
    }
  }

  public final FieldtempoContext fieldtempo() throws RecognitionException {
    FieldtempoContext _localctx = new FieldtempoContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_fieldtempo);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(101);
      match(T__8);
      {
      setState(103); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(102);
        match(DIGIT);
        }
        }
        setState(105); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( _la==DIGIT );
      setState(107);
      match(T__4);
      setState(109); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(108);
        match(DIGIT);
        }
        }
        setState(111); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( _la==DIGIT );
      }
      setState(113);
      match(T__9);
      setState(115); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(114);
        match(DIGIT);
        }
        }
        setState(117); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( _la==DIGIT );
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldvoiceContext extends ParserRuleContext {
    public List<TerminalNode> STRING() { return getTokens(abcHeaderParser.STRING); }
    public TerminalNode STRING(int i) {
      return getToken(abcHeaderParser.STRING, i);
    }
    public List<TerminalNode> DIGIT() { return getTokens(abcHeaderParser.DIGIT); }
    public TerminalNode DIGIT(int i) {
      return getToken(abcHeaderParser.DIGIT, i);
    }
    public FieldvoiceContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldvoice; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).enterFieldvoice(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).exitFieldvoice(this);
    }
  }

  public final FieldvoiceContext fieldvoice() throws RecognitionException {
    FieldvoiceContext _localctx = new FieldvoiceContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_fieldvoice);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(119);
      match(T__10);
      setState(121); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(120);
        _la = _input.LA(1);
        if ( !(_la==DIGIT || _la==STRING) ) {
        _errHandler.recoverInline(this);
        } else {
          consume();
        }
        }
        }
        setState(123); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( _la==DIGIT || _la==STRING );
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldkeyContext extends ParserRuleContext {
    public TerminalNode KEY() { return getToken(abcHeaderParser.KEY, 0); }
    public FieldkeyContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldkey; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).enterFieldkey(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).exitFieldkey(this);
    }
  }

  public final FieldkeyContext fieldkey() throws RecognitionException {
    FieldkeyContext _localctx = new FieldkeyContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_fieldkey);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(125);
      match(KEY);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class CommentContext extends ParserRuleContext {
    public TerminalNode STRING() { return getToken(abcHeaderParser.STRING, 0); }
    public TerminalNode NEWLINE() { return getToken(abcHeaderParser.NEWLINE, 0); }
    public CommentContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_comment; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).enterComment(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).exitComment(this);
    }
  }

  public final CommentContext comment() throws RecognitionException {
    CommentContext _localctx = new CommentContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_comment);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(127);
      match(T__11);
      setState(128);
      match(STRING);
      setState(129);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class EndoflineContext extends ParserRuleContext {
    public CommentContext comment() {
      return getRuleContext(CommentContext.class,0);
    }
    public TerminalNode NEWLINE() { return getToken(abcHeaderParser.NEWLINE, 0); }
    public EndoflineContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_endofline; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).enterEndofline(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof abcHeaderListener ) ((abcHeaderListener)listener).exitEndofline(this);
    }
  }

  public final EndoflineContext endofline() throws RecognitionException {
    EndoflineContext _localctx = new EndoflineContext(_ctx, getState());
    enterRule(_localctx, 22, RULE_endofline);
    try {
      setState(133);
      switch (_input.LA(1)) {
      case T__11:
        enterOuterAlt(_localctx, 1);
        {
        setState(131);
        comment();
        }
        break;
      case NEWLINE:
        enterOuterAlt(_localctx, 2);
        {
        setState(132);
        match(NEWLINE);
        }
        break;
      default:
        throw new NoViableAltException(this);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static final ATN _ATN =
    new ATNDeserializer().deserialize(_serializedATN.toCharArray());
  static {
    _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
    for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
      _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
    }
  }
}